# jcan

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/: app_state.hpp  async_dialog.hpp  dbc_engine.hpp  discovery.cpp  discovery.hpp  firmware_blobs.S.in  firmware_blobs.hpp  frame_buffer.hpp  gui_main.cpp  hardware.hpp  hardware_kvaser.hpp  hardware_kvaser_canlib.hpp  hardware_mock.hpp  hardware_slcan.hpp  hardware_sock.hpp  hardware_vector.hpp  hardware_vector_xlapi.hpp  logger.hpp  main.cpp  motec_ld.hpp  permissions.hpp  settings.hpp  signal_source.hpp  signal_store.hpp  theme.hpp  tx_scheduler.hpp  types.hpp
src/widgets/: channel_list.hpp  connection.hpp  monitor.hpp  plotter.hpp  signal_watcher.hpp  signals.hpp  statistics.hpp  strip_chart.hpp  transmitter.hpp
